hard-gists/7226559/run.log
=== Docker Run Log for 7226559 ===
Started at: Mi 29. Okt 17:02:29 CET 2025

[2025-10-29 17:02:30] START: Running container for 7226559
[2025-10-29 17:02:30] SUCCESS: Container bc0cee7a53125c77a9ea9120b3008773f31b14e7e2ffc0139a78aff63ea8a0fa started for 7226559
=== Container logs for 7226559 ===
  File "/snippet.py", line 68
    print self.url
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7226559 ===
[2025-10-29 17:02:32] INFO: Container bc0cee7a53125c77a9ea9120b3008773f31b14e7e2ffc0139a78aff63ea8a0fa has stopped
